--- a/Standard.Customer.SOR/ClientApp/package.json
+++ b/Standard.Customer.SOR/ClientApp/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "8.2.12",
     "@angular/router": "8.2.12",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "@syncfusion/ej2-angular-grids": "^19.2.44",
     "bootstrap": "^4.6.0",
     "core-js": "^3.8.3",
     "jquery": "^3.5.1",
@@ -30,6 +31,7 @@
     "popper.js": "^1.16.0",
     "protractor": "~5.4.2",
     "rxjs": "^6.6.3",
+    "ngx-toastr": "^10.0.4",
     "ts-node": "~8.4.1",
     "tslint": "~5.20.0",
     "zone.js": "0.9.1"
